--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-@import "./assets//font/font.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   font-family: "Plus Jakarta Sans";
