--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,9 +1,5 @@
-@import "../font/font.css";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
-@import "../font/font.css";
+
 
 ::-webkit-scrollbar {
   width: 4px;
@@ -22,7 +18,7 @@
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  /* background: #555; */
 }
 
 .body-overlay::after {
@@ -42,35 +38,23 @@
 body {
   font-family: "Plus Jakarta Sans";
   font-weight: normal;
-<<<<<<< HEAD
-  background-color: #f3f4f6;
+  /* background-color: #f3f4f6; */
 }
+
 .container {
-  @apply max-w-[1600px]  mx-auto w-full;
-=======
-}
-.container {
-  @apply max-w-[1800px] px-4 mx-auto w-full;
->>>>>>> a108a58f36224a732ef4170b9625727c2873a9b8
+  @apply max-w-[1600px] mx-auto w-full;
 }
 
 /* navbar css */
 .navbar {
-<<<<<<< HEAD
   @apply max-h-[120px] h-full py-[10px] pl-[20px];
-=======
-  @apply max-h-[120px] h-full py-[10px] pl-[20px] bg-white;
->>>>>>> a108a58f36224a732ef4170b9625727c2873a9b8
 }
 .nav_logo {
   @apply h-[69px] w-auto select-none;
 }
-<<<<<<< HEAD
 .sidebar_logo {
   @apply h-[100px];
 }
-=======
->>>>>>> a108a58f36224a732ef4170b9625727c2873a9b8
 
 .menu_bar li {
   @apply py-[3.24rem] px-[1.74rem] text-[13px] font-bold uppercase leading-4 cursor-pointer;
@@ -101,13 +85,9 @@ body {
 .menu_logo {
   @apply h-full;
 }
-<<<<<<< HEAD
 .opacity_logo {
   opacity: 0.3 !important;
 }
-=======
-
->>>>>>> a108a58f36224a732ef4170b9625727c2873a9b8
 .menu_bar li:hover {
   @apply text-golden;
   transition: all 0.4s ease;
@@ -125,10 +105,7 @@ body {
   cursor: pointer;
   width: 50px;
   height: 50px;
-<<<<<<< HEAD
   z-index: 30;
-=======
->>>>>>> a108a58f36224a732ef4170b9625727c2873a9b8
   border-radius: 50%;
   background: transparent;
 }
@@ -136,7 +113,6 @@ body {
   stroke: rgb(224, 180, 89);
   fill: rgb(224, 180, 89);
 }
-<<<<<<< HEAD
 .open_button svg path {
   stroke: white;
 }
@@ -170,23 +146,6 @@ body {
 /* .framer_li:hover {
   @apply bg-golden;
 } */
-=======
-
-.framer_ul {
-  padding: 25px;
-  position: absolute;
-  top: 100px;
-  right: 0;
-  height: calc(100vh - 120px);
-}
-
-.framer_li {
-  @apply list-none flex items-center cursor-pointer p-[10px] text-[18px] uppercase;
-}
-.framer_li:hover {
-  @apply bg-golden;
-}
->>>>>>> a108a58f36224a732ef4170b9625727c2873a9b8
 
 .icon-placeholder {
   @apply w-40 h-40 rounded-full flex-shrink-0 mr-20;
@@ -199,7 +158,6 @@ body {
 .refresh {
   @apply absolute p-10 bg-opacity-40 bg-black rounded-2xl w-20 h-20 top-10 right-10 flex justify-center items-center cursor-pointer;
 }
-<<<<<<< HEAD
 
 .info svg {
   @apply w-8 h-8 -ml-[5px];
@@ -230,5 +188,3 @@ body {
 .social_icon:hover svg path {
   @apply fill-golden;
 }
-=======
->>>>>>> a108a58f36224a732ef4170b9625727c2873a9b8
