--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
+@import "./assets/font/font.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body {
-  font-family: "Plus Jakarta Sans";
-}
